--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 <title>Expense Tracker</title>
 
 <style>
-*{
-    box-sizing:border-box;
-    font-family: 'Segoe UI', sans-serif;
-}
+*{ box-sizing:border-box; font-family:'Segoe UI',sans-serif; }
 
 body{
     height:100vh;
@@ -16,29 +13,40 @@ body{
     justify-content:center;
     align-items:center;
     background:linear-gradient(135deg,#1d2671,#c33764);
+    transition:0.4s;
+}
+
+body.dark{
+    background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
 }
 
 .container{
-    width:350px;
+    width:430px;
     background:white;
-    padding:30px;
+    padding:25px;
     border-radius:18px;
-    text-align:center;
     box-shadow:0 20px 40px rgba(0,0,0,0.3);
-    animation:fadeIn 1s ease;
+    transition:0.4s;
+    text-align:center;
 }
 
-h1{
-    margin-bottom:20px;
+body.dark .container{
+    background:#1e1e1e;
+    color:white;
 }
 
 input{
     width:100%;
     padding:12px;
-    font-size:16px;
+    margin:8px 0;
     border-radius:8px;
     border:1px solid #ccc;
-    margin-bottom:15px;
+}
+
+body.dark input{
+    background:#333;
+    color:white;
+    border:1px solid #555;
 }
 
 button{
@@ -47,92 +55,185 @@ button{
     margin:6px 0;
     border:none;
     border-radius:8px;
-    font-size:16px;
     cursor:pointer;
     color:white;
-    transition:0.3s;
+    font-size:15px;
 }
 
-button:hover{
-    transform:scale(1.05);
+.add{background:#4CAF50;}
+.view{background:#2196F3;}
+.export{background:#9C27B0;}
+.toggle{background:#607D8B;}
+.reset{background:#FF9800;}
+.exit{background:#f44336;}
+.login{background:#3F51B5;}
+
+ul{
+    list-style:none;
+    padding:0;
+    max-height:170px;
+    overflow-y:auto;
+    text-align:left;
 }
 
-.add{ background:#4CAF50; }
-.view{ background:#2196F3; }
-.reset{ background:#FF9800; }
-.exit{ background:#f44336; }
-
-#output{
-    margin-top:15px;
-    font-weight:bold;
-    animation:pop 0.4s ease;
+li{
+    background:#f4f4f4;
+    margin:6px 0;
+    padding:10px;
+    border-radius:6px;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
 }
 
-@keyframes fadeIn{
-    from{opacity:0; transform:translateY(30px);}
-    to{opacity:1; transform:translateY(0);}
+body.dark li{ background:#2f2f2f; }
+
+.actions button{
+    width:auto;
+    margin-left:5px;
+    padding:6px 10px;
+    font-size:13px;
 }
 
-@keyframes pop{
-    from{transform:scale(0.8); opacity:0;}
-    to{transform:scale(1); opacity:1;}
-}
+.edit{background:#009688;}
+.del{background:#f44336;}
+
+#output{ font-weight:bold; margin-top:10px; }
 </style>
 </head>
 
 <body>
 
-<div class="container" id="app">
+<!-- LOGIN PAGE -->
+<div class="container" id="loginBox">
+    <h2>🔐 Login</h2>
+    <input id="user" placeholder="Username">
+    <input id="pass" type="password" placeholder="Password">
+    <button class="login" onclick="login()">Login</button>
+    <p id="loginMsg"></p>
+</div>
+
+<!-- APP PAGE -->
+<div class="container" id="app" style="display:none;">
     <h1>💰 Expense Tracker</h1>
 
     <input type="number" id="amount" placeholder="Enter expense amount">
 
     <button class="add" onclick="addExpense()">Add Expense</button>
-    <button class="view" onclick="viewTotal()">View Total Expense</button>
-    <button class="reset" onclick="resetExpense()">Reset Amount</button>
-    <button class="exit" onclick="exitApp()">Exit</button>
+    <button class="view" onclick="viewTotal()">View Total</button>
+    <button class="export" onclick="exportExcel()">Export to Excel</button>
+    <button class="toggle" onclick="toggleDark()">Dark Mode</button>
+    <button class="reset" onclick="resetExpense()">Reset All</button>
+    <button class="exit" onclick="logout()">Logout</button>
 
     <p id="output"></p>
+    <ul id="expenseList"></ul>
 </div>
 
 <script>
-let expense = [];
+let expense = JSON.parse(localStorage.getItem("expenses")) || [];
+let dark = localStorage.getItem("dark") === "true";
+
+if(dark) document.body.classList.add("dark");
+
+if(localStorage.getItem("logged") === "true"){
+    showApp();
+}
+
+function login(){
+    let u=user.value, p=pass.value;
+    if(u && p){
+        localStorage.setItem("logged","true");
+        showApp();
+    }else{
+        loginMsg.innerText="Invalid credentials ❌";
+    }
+}
+
+function logout(){
+    localStorage.removeItem("logged");
+    location.reload();
+}
+
+function showApp(){
+    loginBox.style.display="none";
+    app.style.display="block";
+    renderList();
+}
+
+function save(){
+    localStorage.setItem("expenses",JSON.stringify(expense));
+}
 
 function addExpense(){
-    let amount = document.getElementById("amount").value;
+    let amt=amount.value;
+    if(amt<=0){ show("Invalid amount ❌"); return; }
 
-    if(amount === ""){
-        show("Enter a valid amount ❌");
-        return;
+    expense.push({
+        amount:Number(amt),
+        time:new Date().toLocaleString()
+    });
+    save(); renderList();
+    amount.value="";
+    show("Expense added ✅");
+}
+
+function editExpense(i){
+    let newAmt=prompt("Edit amount:",expense[i].amount);
+    if(newAmt && newAmt>0){
+        expense[i].amount=Number(newAmt);
+        save(); renderList();
+        show("Expense updated ✏️");
     }
+}
 
-    expense.push(Number(amount));
-    document.getElementById("amount").value="";
-    show("Expense added successfully ✅");
+function deleteExpense(i){
+    expense.splice(i,1);
+    save(); renderList();
+    show("Expense deleted 🗑️");
 }
 
 function viewTotal(){
-    let total = expense.reduce((a,b)=>a+b,0);
-    show("Total Expense: ₹ " + total);
+    let total=expense.reduce((s,e)=>s+e.amount,0);
+    show("Total Expense: ₹ "+total);
 }
 
 function resetExpense(){
-    expense = [];
-    show("Expense reset successfully 🔄");
+    expense=[];
+    save(); renderList();
+    show("All expenses cleared 🔄");
 }
 
-function exitApp(){
-    document.getElementById("app").innerHTML =
-        "<h1>👋 Exited Successfully</h1>";
+function exportExcel(){
+    let csv="Amount,Date & Time\n";
+    expense.forEach(e=>csv+=`${e.amount},${e.time}\n`);
+    let blob=new Blob([csv],{type:"text/csv"});
+    let a=document.createElement("a");
+    a.href=URL.createObjectURL(blob);
+    a.download="expenses.csv";
+    a.click();
 }
 
-function show(msg){
-    let out=document.getElementById("output");
-    out.innerText=msg;
-    out.style.animation="none";
-    out.offsetHeight;
-    out.style.animation="pop 0.4s ease";
+function toggleDark(){
+    document.body.classList.toggle("dark");
+    localStorage.setItem("dark",document.body.classList.contains("dark"));
 }
+
+function renderList(){
+    expenseList.innerHTML="";
+    expense.forEach((e,i)=>{
+        expenseList.innerHTML+=`
+        <li>
+            <div>₹${e.amount}<br><small>${e.time}</small></div>
+            <div class="actions">
+                <button class="edit" onclick="editExpense(${i})">✏️</button>
+                <button class="del" onclick="deleteExpense(${i})">❌</button>
+            </div>
+        </li>`;
+    });
+}
+
+function show(msg){ output.innerText=msg; }
 </script>
 
 </body>
